--- a/style.css
+++ b/style.css
@@ -1,67 +1,479 @@
+@import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
+:root{
+
+  --bg-black-900: #151515;
+  --bg-black-100: #222222;
+  --bg-black-50: #393939;
+  --bg-orange-100: #fa5b0f;
+  --text-black-900: #ffffff;
+  --text-black-700: #e9e9e9;
+
+}
 
 body { 
-  font-family: Arial;
-  width: 90%;
-  margin: 20px auto;
-  background-color: #202221;
-  color: white;
-  font-family: 'Times New Roman', Times, serif;        /* Same function as the one inside <p> */
-  font-style: normal;
+    width: 90%;
+    margin: 20px auto;
+    background: var(--bg-black-900);
+    color: white;
+    font-family: 'Poppins' sans-serif;
+    font-style: normal;
+
+
+}
+
+*{
+/* margin: 0; */
+padding: 0;
+outline: none;
+text-decoration: none;
+box-sizing: border-box;
 
 }
 
 
 
-
-
-.Font-size{
-  font-family: Italic;
-}
-
-a:visited{
-  color: orange;
-
-}
-
-a:link{
-color: orange;
-}
-
-a:hover{
-  font-size: 110%;
-}
-
-
-
-
-div {
-  background-color: rgb(23, 23, 23);
-  padding: 10px;
-  text-align: center;
-  width: 100%;
-  position: sticky;
-  top: 0%;
-  right: 0;
-}
-
-div a {
-  color: white;
-  text-decoration: none;
-  margin: 0px 20px;
-  font-size: 1.3em;
-
-}
-
-div a:hover {
+.section{
+  background: var(--bg-black-900);
+  min-height: 100vh;
+  display: block;
  
-  color: red;
-  text-decoration: underline;
+  
+  opacity: 1;
+  padding: 0 30px;
+
+
+}
+.main-content{
+  padding-left: 270px;
+}
+.padd-15{
+  padding-left: 15px;
+  padding-right: 15px;
+}
+.container{
+  max-width: 1100px;
+  width: 100%;
+  margin: auto;
+
+}
+
+.row{
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -15px;
+  margin-right: -15px;
+  position: relative;
+}
+
+
+ul{
+  list-style: none;
+}
+
+.aside{
+    width: 270px;
+    background: var(--bg-black-100);
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+   border-right: 1px solid var(--bg-black-50);
+   display: flex;
+    padding: 30px;
+    justify-content: center;
+    align-items: center;
+    z-index: 10;
+
+
+}
+.aside .nav{
+  margin-top: 50px;
+}
+
+
+.aside .active{
+  background-color: var(--bg-black-100);
+}
+
+.aside .nav li{
+  margin-bottom: 20px;
+  display: block;
+}
+
+.aside .nav li a{
+    font-size: 16px;
+    font-weight: 600;
+    display: block;
+    color: var(--text-black-900);
+    padding: 5px 15px;
+    border-bottom: 1px solid var(--bg-black-50);
+}
+
+.aside .nav li a.active{
+  color: var(--bg-orange-100);
+}
+
+.aside .nav li a i{
+  margin-right: 15px;
+}
+
+
+
+
+.home .home-img img{
+
+  height: 400px;
+  border-radius: 5px;
+  margin: auto;
+}
+
+.home .home-img{
+  flex: 0 0 40%;
+  max-width: 40%;
+ 
+  text-align: center;
+  position: relative; 
+
+}
+
+.home-img::after{
+  content: '';
+  position: absolute;
+  height: 80px;
+  width: 80px;
+  right: 20px;
+  bottom: -40px;
+  border-bottom: 10px solid var(--bg-orange-100);
+  border-right: 10px solid var(--bg-orange-100);
+
+
+}
+.home-img::before{
+  content: '';
+  position: absolute;
+  height: 80px;
+  width: 80px;
+  left: -20px;
+  top: -40px;
+  border-top: 10px solid var(--bg-orange-100);
+  border-left: 10px solid var(--bg-orange-100);
+
+
+}
+
+.home{
+  min-height: 100vh;
+  display: flex;
+  color: var(--text-black-900);
+}
+
+.home .home-info{
+
+    flex: 0 0 60%;
+    max-width: 60%;
+
+}
+
+
+h3.hello{
+  font-size: 28px;
+  margin: 15px 0;
+}
+h3.hello span{
+  font-family: 'Clicker Script', cursive;
+  font-size: 30px;
+  font-weight: 700;
+  color: var(--bg-orange-100);
+}
+
+
+.home-info p{
+
+  margin-bottom: 70px;
+  font-size: 20px;
+  color: var(--text-black-700);
+}
+.home-info p span{
+
+  color: var(--bg-orange-100);
+
+}
+
+
+
+
+
+.section .container{
+
+  padding-top: 60px;
+  padding-bottom: 70px;
+
+}
+
+.section-title{
+
+  flex: 0 0 100%;
+  max-width: 100%;
+  margin-bottom: 60px;
+ 
+}
+.section-title h2{
+
+  font-size: 40px;
+  color: var(--text-black-900);
+  font-weight: 700;
+  position: relative;
+
+}
+
+.section-title h2::before{
+
+  content: '';
+  height: 4px;
+  width: 50px;
+  background-color: var(--bg-orange-100);
+  position: absolute;
+  top: 100%;
+  left: 0;
+
+}
+.section-title h2::after{
+
+  content: '';
+  height: 4px;
+  width: 25px;
+  background-color: var(--bg-orange-100);
+  position: absolute;
+  top: 100%;
+  left: 0;
+  margin-top: 8px;
+
+}
+
+/* About */
+
+.about .about-content{
+
+    flex: 0 0 100%;
+    max-width: 100%;
+
+}
+
+.about .about-content .about-text{
+  flex: 0 0 100%;
+  max-width: 100%;
+
+}
+
+.about .about-content .about-text h3{
+  font-size: 24px;
+  margin-bottom: 15px;
+  font-weight: 700;
+  color: var(--text-black-900);
+}
+
+.about .about-content .about-text h3 span{
+
+    color: var(--bg-orange-100);
+
+}
+
+.about .about-content .about-text p{
+  font-size: 16px;
+  line-height: 25px;
+  color: var(--text-black-700);
+
+}
+
+.about .about-content .personal-info{
+
+  flex: 0 0 60%;
+  max-width: 60%;
+  margin-top: 40px;
+
+}
+
+.about .about-content .skills{
+
+  flex: 0 0 40%;
+  max-width: 40%;
+  margin-top: 40px;
+
+}
+.about .about-content .skills .tbl{
+  
+  margin: 40px;
+}
+
+.about .about-content .skills .tbl tr td{
+  padding: 13px 30px;
+  
   
 }
+.about .about-content .skills .tbl .info-item{
 
-.active{
-  background-color: rgba(0, 0, 0, 0);
-  text-decoration: underline;
-  font-size: 30px;
+  padding: 50px 0;
 }
+
+.about .about-content .personal-info .info-item{
+
+  flex: 0 0 50%;
+  max-width: 50%;
+
+}
+
+.about .about-content .personal-info .info-item p{
+
+  font-weight: 600;
+  padding: 10px 0;
+  font-size: 15.6px;
+  color: var(--text-black-900);
+  border-bottom: 1px solid var(--bg-black-50);
+}
+
+.about .about-content .personal-info .info-item p span{
+
+  font-weight: 400;
+  color: var(--text-black-700);
+  margin-left: 4px;
+  display: inline-block;
+
+}
+
+/* contact */
+
+.contact-title{
+
+  color: var(--bg-orange-100);
+  text-align: center;
+  font-size: 25px;
+  margin-bottom: 20px;
+
+
+}
+
+.contact-sub-title{
+
+  color: var(--text-black-900);
+  text-align: center;
+  font-size: 15px;
+  margin-bottom: 60px;
+
+}
+
+.contact .contact-info-item{
+
+  flex: 0 0 25%;
+  max-width: 25%;
+  text-align: center;
+  margin-bottom: 60px;
+
+
+}
+
+.contact .contact-info-item .icon{
+
+    display: inline-block;
+}
+
+.contact .contact-info-item .icon .fa{
+
+    font-size: 25px;
+    color: var(--bg-orange-100);
+}
+.contact .contact-info-item .icon .fa-brands{
+
+  font-size: 25px;
+  color: var(--bg-orange-100);
+}
+
+.contact .contact-info-item h4{
+
+  font-size: 18px;
+  font-weight: 700;
+  color: var(--text-black-900);
+  text-transform: capitalize;
+  margin: 15px 0 5px;
+
+}
+
+.contact .contact-info-item p{
+
+    font-size: 16px;
+    line-height: 25px;
+    color: var(--text-black-700);
+    font-weight: 400;
+
+}
+.contact .contact-info-item a{
+  font-size: 16px;
+  font-weight: 400;
+  display: block;
+  color: var(--text-black-700);
+  padding: 5px 15px;
+ 
+
+}
+
+.contact .contact-form{
+
+    flex: 0 0 100%;
+    max-width: 100%;
+
+}
+
+.contact .contact-form .col-6{
+  flex: 0 0 50%;
+  max-width: 50%;
+
+}
+.contact .contact-form .col-12{
+  
+  flex: 0 0 100%;
+  max-width: 100%;
+
+}
+.contact .contact-form .form-item{
+
+  margin-bottom: 30px;
+
+}
+
+.contact .contact-form .form-item .form-control{
+
+  width: 100%;
+  height: 50px;
+  border-radius: 25px;
+  background: var(--bg-black-100);
+  border: 1px solid var(--bg-black-50);
+  padding: 10px 25px;
+  font-size: 16px;
+  color: var(--text-black-700);
+  transition: all 0.3s ease;
+
+}
+
+.contact .contact-form .form-item .form-control:focus{
+
+    box-shadow: 0 0 20px rgba(48, 46, 77, 0.56);
+
+}
+.contact .contact-form .form-item textarea.form-control{
+
+    height: 140px;
+
+}
+
+.contact .contact-form .btn{
+  
+  height: 50px;
+  padding: 0 50px;
+
+}
+
+
+
+
+
+
